# calibration

./: Measuring_calibration_accuracy_PD.ipynb  README.md  calibration_module.py  calibration_visualization.py  cap-and-ccp-curves.ipynb  histogram_binner.py  temperature_scaling.py
chi-square/: German_FinTechCompanies.csv  LDA.ipynb  advi.ipynb  bayesian-logistic-regression.ipynb  chi-square-divergence.ipynb  contingency-tables.ipynb  metropolis-hastings-mcmc.ipynb  shap_values_xAI.ipynb  sklearn-linear-st-errors.ipynb
doinstruct-coding-challenge/: .env.example  .gitignore  AI_USAGE.md  CLAUDE.md  PY_USAGE.md  README.md  jest.config.js  package-lock.json  package.json  sst.config.ts  tsconfig.json
empirical-fisher/: example_1.py  example_2.py  example_3.py  fisher_neural_networks.py  fisher_nn_landscape.py  loss_landscape_weights.py
logistic-regression/: calibration.py  dataset.parquet  logistic_regression_custom_loss.py  lr-focal-loss.ipynb  plot_2d_interactions.py  pyproject.toml
logistic-regression-inference/: from_woe_to_logistic_regression.ipynb  lgd_woe.ipynb  logistic-regression-inference.ipynb  lwt.csv
loss-functions/: autoencoders.ipynb  back-propagation.ipynb  benchmarking_loss_functions.ipynb  bias-variance-classification.ipynb  bias-variance-tradeoff.ipynb  bias_variance_mse.ipynb  cgan.ipynb  default-prediction-neural-networks.ipynb  fisher-scoring.ipynb  gan.ipynb  gradient-boosting.ipynb  imbalanced-nets-relu.ipynb  label_fine_tuning.py  log-loss.ipynb  logistic-boosting.ipynb  logistic-regression-woe-vs-raw.ipynb  logistic-regression.ipynb  (+11 more)
(+68 files in other folders)
