[tool.poetry]
name = "lr-focal-loss"
version = "0.1.0"
description = ""
authors = ["Denis <denis.burakov@n26.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "2.0.0"
numpy = "1.26.0"
scikit-learn = "1.3"
matplotlib = "^3.8.0"
pyarrow = "^13.0.0"
ipykernel = "6.25.2"
dask = "^2023.10.0"
keras = "2.14.0"
ml-dtypes = "0.2.0"
tensorboard = "2.14.1"
tensorflow-estimator = "2.14.0"
tensorflow-macos = "2.14.0"
deeptables = "0.2.5"
mlem = "^0.4.14"
pydot = "^1.4.2"
graphviz = "^0.20.1"
pydotplus = "^2.0.2"
pytorch-tabnet = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.poetry.extras]
tensorflow-x64 = ["tensorflow"]
tensorflow-m1 = ["tensorflow-macos", "tensorflow-metal"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
